src/index.css
@import "tailwindcss";

.Map {
  height: 100%;
  width: 100%;
  max-width: 500px;
  max-height: 500px;
  position: relative;
}

#CostaRica {
  transition: transform .5s ease-out;
  will-change: transform;
}

.SanJose {
  fill: #a158dd
}

.Alajuela {
  fill: #F87171
}

.Cartago {
  fill: #56a2ff;
}

.Heredia {
  fill: #f3ff50;
}

.Guanacaste {
  fill: #4ADE80;
}

.Puntarenas {
  fill: #FB923C;
}

.Limon {
  fill: #5aee3c;
}

.provincia {
  transition: filter .2s ease-out, transform .2s ease-out, opacity .5s ease-in-out;
  transform-origin: center;
  transform-box: fill-box;
  stroke: rgba(0, 0, 0, .3);
}

.provincia:hover {
  cursor: pointer;
  filter: brightness(1.05) drop-shadow(3px 20px 1px #00000055);
  transform: scale(1.05);
}

#CostaRica:has(.provincia.selected) .provincia:hover {
  cursor: unset;
  filter: unset;
  transform: scale(1);
}

.provincia.fade {
  opacity: 0;
}

